--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18"
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.7",
@@ -48,8 +48,7 @@
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.0",
-    "vite-plugin-pwa": "^1.0.2"
+    "typescript-eslint": "^8.8.39",
+    "vite": "^7.1.0"
   }
 }
